gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail23745.d
version https://git-lfs.github.com/spec/v1
oid sha256:88af4cd48be24021a94462de93cbbefcfc83e153f0ada91f30587826bf1b58a2
size 530
